<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">eyePhone</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="default_password"></string>
    <string name="login_instructions">Enter the server password and then tap &#8220;Login&#8221;.</string>
    <string name="illegal_password_exception">The connection was rejected by the server because the password was incorrect.</string>
	<string name="io_exception_title">Unable to connect</string>
    <string name="io_exception">The server did not respond with a valid HTTP request.</string>
    <string name="ok">OK</string>
    <string name="client_config">Client configuration</string>
    <string name="server_config">Server configuration</string>
    <string name="sync_successful">Local database was updated.</string>
	<string name="handshake_exception">Unable to establish an encrypted connection to the server.</string>
	<string name="handshake_exception_title">Handshake failed</string>
    <string name="search_title">Search</string>
    <string name="refresh">Refresh</string>
    <string name="statistics">Statistics</string>
    <string name="phone_title">Phone</string>
    <string name="sendSMS_content_desc">Send an SMS</string>
    <string name="sendSMS">Send SMS</string>
    <string name="call_content_desc">Make a call</string>
    <string name="call">Call</string>
    <string name="imei_title">IMEI</string>
    <string name="id_title">ID</string>
    <string name="imsi_title">IMSI</string>
    <string name="tmsi_title">TMSI</string>
    <string name="station_title">LAC</string>
    <string name="authorized_title">Authorized</string>
    <string name="edit_title">Edit</string>
    <string name="set_name">Set name</string>
    <string name="set_extension">Set extension</string>
    <string name="save">Save</string>
    <string name="subscriber_updated">Subscriber has been updated.</string>
    <string name="syncing">Syncing&#8230;</string>
    <string name="retry">Try again</string>
    <string name="parsing_error_title">Parsing error</string>
    <string name="extension_error">The field &#8220;extension&#8221; could not be parsed.</string>
    <string name="default_error_message">Could not connect to server.</string>
    <string name="about">About</string>
    <string name="about_desc">Developed by Peter Caprioli\nand Bastian Fredriksson.</string>
    <string name="encryption_notice">Encrypted with 256 bit AES</string>
    <string name="email_title">Email</string>
    <string name="logo_content_desc">Our logo</string>
    <string name="add_recipients">Add recipients</string>
    <string name="message">Message</string>
    <string name="no_internet_connection">No internet connection could be established. Please enable wifi or mobile data.</string>
    <string name="no_internet_connection_title">No internet connection found.</string>
    <string name="enter_server_password">Enter server password&#8230;</string>
    <string name="encoding_failed">Encoding failed</string>
    <string name="encoding_not_supported">The specified encoding "UTF-8" is not supported on your device.</string>
    <string name="number_format_exception"></string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="broadcast">Broadcast</string>
    <string name="sort">Sort</string>
    <string name="sorted_by_name">Sorted by name.</string>
    <string name="sorted_by_extension">Sorted by number.</string>
    <string name="sorted_by_id">Sorted by identifier.</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_extension">Sort by number</string>
    <string name="sort_by_id">Sort by ID</string>
    <string name="favorites_first">Favorites first</string>
    <string name="recipient_already_added">The recipient you chose is already added.</string>
    <string name="no_recipients">No recipients selected.</string>
    <string name="logging_in">Logging in&#8230;</string>
</resources>