<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Action bar search widget -->
    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_btn_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search_title"/>
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_menu_sort_alphabetically"
        android:showAsAction="ifRoom"
        android:title="@string/sort">
        <menu>
            <item
                android:id="@+id/sort_by_name"
                android:title="@string/sort_by_name"/>
            <item
                android:id="@+id/sort_by_extension"
                android:title="@string/sort_by_extension"/>
            <item
                android:id="@+id/sort_by_id"
                android:title="@string/sort_by_id"/>
            <item
                android:id="@+id/favorites_first"
                android:title="@string/favorites_first" />
        </menu>
    </item>

    <!-- Menu -->
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/statistics"
        android:title="@string/statistics"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"/>

</menu>