<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:id="@+id/login_holder_inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >


        <TextView
            android:id="@+id/encryption_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/encryption_notice"
            android:textColor="@android:color/black"
            android:textColorLink="@android:color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/encryption_notice"
            android:layout_alignParentRight="true"
            android:padding="20dip"
            android:text="@string/login" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/submit"
            android:layout_alignLeft="@+id/submit"
            android:layout_marginBottom="24dp"
            android:inputType="textPassword"
            android:text="@string/default_password" />

        <TextView
            android:id="@+id/login_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login_instructions" />

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_instructions"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="204dp"
            android:contentDescription="@string/logo_content_desc"
            android:src="@drawable/logo_login" />

    </RelativeLayout>

    <!-- Notifications holder -->

    <LinearLayout
        android:id="@+id/notifications_holder_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F4E0E0"
        android:orientation="vertical" >

        <!-- Inflate notifications here -->
    </LinearLayout>

</RelativeLayout>