<?xml version="1.0" encoding="UTF-8"?>
<!-- Edit subscriber -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_subscriber"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- Edit name -->

    <TextView
        android:id="@+id/edit_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_name"
        android:textColor="#CCC"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="24sp" />

    <!-- Edit extension -->

    <Space
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/edit_extension_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_extension"
        android:textColor="#CCC"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_extension_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="24sp" />

    <!-- Save changes -->

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:onClick="saveSubscriber"
        android:paddingBottom="8dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="8dp"
        android:text="@string/save" />

</LinearLayout>