<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sms_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SMSActivity" >

    <!-- Broadcast -->

    <TextView
        android:id="@+id/broadcast_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadcast"
        android:textColor="#CCC"
        android:textSize="12sp" />

    <Switch
        android:id="@+id/broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/selected_recipients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp" >

        <!-- Add recipients here -->
    </LinearLayout>

    <!-- Recipients -->

    <TextView
        android:id="@+id/recipients_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_recipients"
        android:textColor="#CCC"
        android:textSize="12sp" />

    <AutoCompleteTextView
        android:id="@+id/recipients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:completionThreshold="1"
        android:inputType="text" />

    <!-- Message -->

    <TextView
        android:id="@+id/message_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/message"
        android:textColor="#CCC"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:inputType="textMultiLine" />

</LinearLayout>