<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/subscriber_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/subscriber_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <!-- Edit -->

        <LinearLayout
            android:id="@+id/edit_view_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp" >

            <!-- Inflate here -->
        </LinearLayout>

        <!-- Phone -->

        <RelativeLayout
            android:id="@+id/phone_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <!-- Left -->

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/phone_title"
                android:textColor="#CCC"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/extension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/phone"
                android:textIsSelectable="true"
                android:textSize="24sp" />
            <!-- Right -->

            <LinearLayout
                android:id="@+id/actions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/call_content_desc"
                    android:onClick="makeCall"
                    android:src="@drawable/ic_menu_call" />

                <View
                    android:id="@+id/divider_call"
                    android:layout_width="0.25dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="#CCC" />

                <ImageView
                    android:id="@+id/sendSMS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/sendSMS_content_desc"
                    android:onClick="sendSMS"
                    android:src="@drawable/ic_menu_compose" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="#CCC" />

        <!-- Details -->

        <LinearLayout
            android:id="@+id/details_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- ID -->

            <RelativeLayout
                android:id="@+id/id_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/id_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_title"
                    android:textColor="#CCC"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/id_title"
                    android:textIsSelectable="true"
                    android:textSize="24sp" />
            </RelativeLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="#CCC" />

            <!-- Station -->

            <RelativeLayout
                android:id="@+id/station_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/station_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/station_title"
                    android:textColor="#CCC"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/station"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/station_title"
                    android:textIsSelectable="true"
                    android:textSize="24sp" />
            </RelativeLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="#CCC" />

            <!-- IMEI -->

            <RelativeLayout
                android:id="@+id/imei_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/imei_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imei_title"
                    android:textColor="#CCC"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/imei"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imei_title"
                    android:textIsSelectable="true"
                    android:textSize="24sp" />
            </RelativeLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="#CCC" />

            <!-- IMSI -->

            <RelativeLayout
                android:id="@+id/imsi_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/imsi_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imsi_title"
                    android:textColor="#CCC"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/imsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imsi_title"
                    android:textIsSelectable="true"
                    android:textSize="24sp" />
            </RelativeLayout>

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="#CCC" />

            <!-- TMSI -->

            <RelativeLayout
                android:id="@+id/tmsi_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tmsi_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tmsi_title"
                    android:textColor="#CCC"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tmsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tmsi_title"
                    android:textIsSelectable="true"
                    android:textSize="24sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>